--- a/localisation/russian/replace/replace_research_l_russian.yml
+++ b/localisation/russian/replace/replace_research_l_russian.yml
@@ -41,19 +41,19 @@
  RESEARCH_INSTANT_DESC:0 "Исследование происходит мгновенно при изменении дерева с более чем одной технологией, исследованной в текущем дереве."
  infantry_folder:0 "Пехота"
  infantry_folder_desc:0 "Оборудование и вооружение для пехотных войск."
- support_folder:0 "Батальоны Поддержки"
+ support_folder:0 "Батальоны поддержки"
  support_folder_desc:0 "Разведка, инженерные войска, полевые госпитали и другие вспомогательные роты."
  armour_folder:0 "Бронетехника"
- armour_folder_desc:0 "Танки и их разновидности."
- nsb_armour_folder:0 "Броня"
- nsb_armour_folder_desc:0 "Бронетанковая техника и танки."
+ armour_folder_desc:0 "Бронеавтомобили и танки."
+ nsb_armour_folder:0 "Бронетехника"
+ nsb_armour_folder_desc:0 "Бронеавтомобили и танки."
  artillery_folder:0 "Артиллерия"
  artillery_folder_desc:0 "Артиллерийское, противотанковое и зенитное вооружение для дивизий."
  land_doctrine_folder:0 "Сухопутная доктрина"
  land_doctrine_folder_desc:0 "Сухопутная доктрина, способы ведения боевых действий вашими сухопутными войсками."
  naval_folder:0 "ВМФ"
- naval_folder_desc:0 "Корабли и Подводные Лодки."
- naval_doctrine_folder:0 "Военно-Морская Доктрина"
+ naval_folder_desc:0 "Корабли и подводные лодки."
+ naval_doctrine_folder:0 "Военно-морская доктрина"
  naval_doctrine_folder_desc:0 "Военно-морская доктрина, определяющая, как должен сражаться ваш флот."
  air_techs_folder:0 "Авиация"
  air_techs_folder_desc:0 "Самолеты."
@@ -89,7 +89,7 @@
  backhand_blow:0 "Удар в тыл"
  backhand_blow_desc:0 "Вместо того чтобы бороться за каждый клочок земли, в основном можно игнорировать вклинивания врага до тех пор, пока он не продвинется слишком глубоко - тогда его можно отрезать и уничтожить в ходе контрнаступления."
  modern_blitzkrieg:0 "Современный блицкриг"
- modern_blitzkrieg_desc:0 "Современный блицкриг - венец маневренной войны, он включает в себя все последние технологические достижения и уроки, извлеченные из предыдущих доктрин"
+ modern_blitzkrieg_desc:0 "Современный блицкриг - венец маневренной войны, он включает в себя все последние технологические достижения и уроки, извлеченные из предыдущих доктрин."
  volkssturm:0 "Фольксштурм"
  volkssturm_desc:0 "Фольксштурм, или народное ополчение, состояло из мужчин, которые были негодны к военной службе по возрасту или другим причинам.\n\n"
  nd_conscription:0 "Неограниченный призыв"
@@ -179,7 +179,7 @@
  mechanized_wave:0 "Механизированная волна"
  mechanized_wave_desc:0 "Механизированные боевые части идеально подходят для быстрого наступления, необходимого при правильном использовании прорывов: они и поддерживают танковые части, и прикрывают фланги по линии прохода."
  continuous_offensive:0 "Непрерывное наступление"
- continuous_offensive_desc:0 "Несмотря на всю эффективность грамотно осуществленного прорыва, рано или поздно нападающая сторона истощит ресурсы, и защитники смогут реорганизоваться, создав новые линии обороны. Однако при достаточном количестве резервов и правильной организации наступление можно сделать гораздо более глубоким и нанести сокрушительный удар по врагу."
+ continuous_offensive_desc:0 "Наша армия должна быть способна нанести неожиданный и быстрый удар, прежде чем вражеские войска успеют занять оборонительные позиции."
  human_wave_offensive:0 "Массированный бой"
  human_wave_offensive_desc:0 "Массированный бой - тактика пехотных войск, в ходе которой атакующие части ведут прямое наступление на вражескую линию обороны плотно сосредоточенными отрядами пехоты, чтобы смять ее и вступить в рукопашный бой."
  human_infantry_offensive:0 "Пехотное наступление"
@@ -192,16 +192,16 @@
  guerilla_warfare_desc:0 "Враг наступает, мы отступаем. Враг разбивает лагерь, мы докучаем набегами. Враг устает, мы нападаем. Враг отступает, мы его преследуем."
 
 
- infantry_weapons2:0 "Пехотное Снаряжение I"
- infantry_weapons2_desc:0 "Индивидуальное и коллективное стрелковое оружие, а также прочие элементы экипировки пехотинца. Улучшенные модели оружия и более специализированная экипировка."
- improved_infantry_weapons_2:0 "Пехотное Снаряжение II"
- improved_infantry_weapons_2_desc:0 "Индивидуальное и коллективное стрелковое оружие, а также прочие элементы экипировки пехотинца. Улучшенные модели оружия и более специализированная экипировка."
- advanced_infantry_weapons2:0 "Пехотное Снаряжение III"
- advanced_infantry_weapons2_desc:0 "Индивидуальное и коллективное стрелковое оружие, а также прочие элементы экипировки пехотинца. Включает штурмовые винтовки и противотанковые гранатометы. Оружие, ранее поставлявшееся в ограниченном количестве, теперь более доступно."
- advanced_infantry_weapons3:0 "Пехотное Снаряжение IV"
- advanced_infantry_weapons3_desc:0 "Индивидуальное и коллективное стрелковое оружие, а также прочие элементы экипировки пехотинца. Включает штурмовые винтовки и противотанковые гранатометы. Оружие, ранее поставлявшееся в ограниченном количестве, теперь более доступно."
- advanced_infantry_weapons4:0 "Пехотное Снаряжение V"
- advanced_infantry_weapons4_desc:0 "Индивидуальное и коллективное стрелковое оружие, а также прочие элементы экипировки пехотинца. Включает штурмовые винтовки и противотанковые гранатометы. Оружие, ранее поставлявшееся в ограниченном количестве, теперь более доступно."
+ infantry_weapons2:0 "Пехотное снаряжение I"
+ infantry_weapons2_desc:0 "Персональное и коллективное пехотное вооружение, а также другие необходимые солдату предметы. Снаряжение включает в себя пехотные гранаты и современные винтовки."
+ improved_infantry_weapons_2:0 "Пехотное снаряжение II"
+ improved_infantry_weapons_2_desc:0 "Персональное и коллективное пехотное вооружение, а также другие необходимые солдату предметы. В комплект снаряжения входят скорострельные винтовки, а также громоздкий легкий пулемет."
+ advanced_infantry_weapons2:0 "Пехотное снаряжение III"
+ advanced_infantry_weapons2_desc:0 "Персональное и коллективное пехотное вооружение, а также другие необходимые солдату предметы. Новое снаряжение включает в себя пехотную броню для штурмовых отрядов, а также набор новых типов гранат и скорострельного оружия."
+ advanced_infantry_weapons3:0 "Пехотное снаряжение IV"
+ advanced_infantry_weapons3_desc:0 "Персональное и коллективное пехотное вооружение, а также другие необходимые солдату предметы. Новое снаряжение включает в себя пехотную броню для штурмовых отрядов, а также набор новых типов гранат и скорострельного оружия."
+ advanced_infantry_weapons4:0 "Пехотное снаряжение V"
+ advanced_infantry_weapons4_desc:0 "Персональное и коллективное пехотное вооружение, а также другие необходимые солдату предметы. Новое снаряжение включает в себя пехотную броню для штурмовых отрядов, а также набор новых типов гранат и скорострельного оружия."
 
  infantry_at:0 "Пехотное противотанковое оружие I"
  infantry_at_desc:0 "Оснастив нашу пехоту противотанковыми ружьями, мы позволим ей уничтожать легкую бронетехнику, не теряя мобильности."
@@ -209,15 +209,15 @@
  infantry_at2_desc:0 "Чтобы пехота могла эффективнее вести бой с тяжелой бронетехникой, противотанковые ружья должны стать меньше и легче."
 
  support_weapons:0 "Оружие огневой поддержки I"
- support_weapons_desc:0 "Автоматическое оружие становится все более портативным. Пистолеты-пулеметы уже доказали свою эффективность. Необходимо продолжать разработку ручного оружия огневой поддержки."
+ support_weapons_desc:0 "Стандартизированные пулеметы довоенной эпохи."
  support_weapons2:0 "Оружие огневой поддержки II"
- support_weapons2_desc:0 "Разработка моделей, сочетающих свойства легкого и тяжелого автоматического оружия, позволяет более гибко экипировать нашу пехоту."
+ support_weapons2_desc:0 "Передовая оптика для снайперских винтовок и приборов наблюдения."
  support_weapons3:0 "Оружие огневой поддержки III"
- support_weapons3_desc:0 "Улучшая надежность автоматического оружия, мы можем также экспериментировать с более высокой скорострельностью, чтобы непрерывный поток пуль стал еще смертоноснее."
+ support_weapons3_desc:0 "У станковых пулеметов теперь есть модернизированные затворы, разброс огня сведен к минимуму."
  support_weapons4:0 "Оружие огневой поддержки IV"
- support_weapons4_desc:0 "По мере распространения штурмовых винтовок разработка надежного автоматического оружия, которое любой солдат сможет применять в любых условиях, становится главной задачей современной армии."
+ support_weapons4_desc:0 "Огнеметы особенно эффективны для выкуривания противника из окопов."
  support_weapons5:0 "Оружие огневой поддержки V"
- support_weapons5_desc:0 "Размеры пулемета значительно уменьшены. Новые пулеметы могут использоваться в качестве оружия поддержки, а также в составе штурмовых групп."
+ support_weapons5_desc:0 "Размеры пулемета значительно уменьшены. Новые пулеметы могут использоваться как в качестве вспомогательного оружия, так и в составе штурмовых групп."
  support_weapons6:0 "Оружие огневой поддержки VI"
  support_weapons6_desc:0 "Опыт Великой войны позволит усовершенствовать конструкцию пулемета и реорганизовать группы поддержки."
  support_weapons7:0 "Оружие огневой поддержки VII"
@@ -233,35 +233,35 @@
 
 
  marines:0 "Морская пехота I"
- marines_desc:0 "Войска, специализирующиеся на морских десантных операциях, становятся все более незаменимыми. Импровизированные тактические приемы и снаряжение уходят в прошлое - наша морская пехота теперь проходит специальную подготовку и оснащена специальными десантными кораблями."
+ marines_desc:0 "Морпехи - пехотинцы на службе у военно-морского флота. Они достаточно подготовлены и уверенно вступают в бой при высадке морского десанта или форсировании водных преград."
  marines2:0 "Морская пехота II"
- marines2_desc:0 "Морские десантные операции требуют новаторского подхода. Улучшенное снабжение и подвижные порты позволят нашим морпехам осуществлять ранее невозможные высадки."
+ marines2_desc:0 "Морская пехота теперь не только обучена морскому десанту, но и экипирована для этого. Специальные инструменты позволят нам быстро совершить прорыв и выбить врага с берега."
  marines3:0 "Морская пехота III"
- marines3_desc:0 "Морпехи - не просто десантные войска. В будущем наш корпус морской пехоты станет одним из самых подготовленных и организованных видов войск специального назначения."
+ marines3_desc:0 "Опыт войны подсказывает нам, что для морской пехоты необходимо разработать специальное боевое построение, подготовить подразделения поддержки и улучшить координацию при высадке."
  marines4:0 "Морская пехота IV"
- marines4_desc:0 "Организация морской пехоты намного выше, чем обычно, поскольку от нее требуется выполнение сложных задач. Основываясь на опыте, необходимо разработать новейшую тактику боя для морской пехоты."
+ marines4_desc:0 "Организация морской пехоты намного выше обычной, так как ей приходится выполнять сложные задачи. Опираясь на опыт, необходимо разработать новейшую тактику ведения боя для морской пехоты."
  marines5:0 "Морская пехота V"
  marines5_desc:0 "Морские пехотинцы внушают страх! Этот вид спецназа способен взять инициативу в свои руки и нанести неожиданный удар, чтобы противник не надеялся спрятаться за водной преградой."
  tech_mountaineers:0 "Горно-стрелковые войска I"
  tech_mountaineers_desc:0 "Боевые действия в горах сопряжены с высокой опасностью для пехоты, но порой их не избежать. Мы можем минимизировать риск, проведя среди наших солдат специальную подготовку для ведения боя в этих условиях."
  tech_mountaineers2:0 "Горно-стрелковые войска II"
- tech_mountaineers2_desc:0 "Наши войска могут добиться превосходства над противником в горах, а не просто выжить. Используя легкое снаряжение и вьючных животных, они преодолевают этот рельеф быстрее, чем другие виды пехоты."
+ tech_mountaineers2_desc:0 "Боевые действия в горах сопряжены с высокой опасностью для пехоты, но порой их не избежать. Мы можем минимизировать риск, проведя среди наших солдат специальную подготовку для ведения боя в этих условиях."
  tech_mountaineers3:0 "Горно-стрелковые войска III"
- tech_mountaineers3_desc:0 "Подготовка к самым тяжелым заданиям на большой высоте в горах и при низкой температуре потребует от наших горно-стрелковых войск предельной собранности и выучки."
+ tech_mountaineers3_desc:0 "Боевые действия в горах сопряжены с высокой опасностью для пехоты, но порой их не избежать. Мы можем минимизировать риск, проведя среди наших солдат специальную подготовку для ведения боя в этих условиях."
  tech_mountaineers4:0 "Горно-стрелковые войска IV"
- tech_mountaineers4_desc:0 "Не ограничиваясь выживанием, наши войска можно обучить использовать горы в своих интересах. С легким снаряжением и мулами они могут маневрировать на этой местности лучше, чем другая пехота.."
+ tech_mountaineers4_desc:0 "Помимо выживания, наши войска можно обучить использовать горы в своих интересах. С легким снаряжением и мулами они могут маневрировать по этой местности лучше, чем другие пехотинцы."
  tech_mountaineers5:0 "Горно-стрелковые войска V"
- tech_mountaineers5_desc:0 "Подготовка к самым тяжелым горным миссиям на больших высотах и при низких температурах потребует от наших горных войск исключительной подготовки и дисциплины."
- tech_special_forces:0 "Войска специального назначения"
- advanced_special_forces:0 "Интенсивная подготовка спецназа"
- advanced_special_forces_desc:0 "Благодаря курсу интенсивной подготовки бойцы нашего спецназа будут сражаться гораздо лучше, чем обычные солдаты."
- improved_special_forces:1 "Расширенная программа подготовки спецназа"
- improved_special_forces_desc:1 "Спецназ выполняет задачи, которые не по силам рядовым солдатам. Мы должны расширить программу подготовки и включить в нее как можно больше бойцов."
- extreme_environment_training:0 "Подготовка к экстремальным условиям"
- survival_training:0 "Курсы выживания"
- survival_training_desc:0 "Наши бойцы спецназа часто сражаются во вражеском тылу, используя жестко ограниченные ресурсы. Мы должны подготовить их к тяжелым погодным условиям и постоянной нехватке припасов."
- elite_forces:0 "Элитные войска"
- elite_forces_desc:0 "Только лучшие из лучших станут бойцами элитных отрядов. Солдаты, успешно завершившие курс подготовки, будут сильнее, быстрее и свирепее в битве, чем кто бы то ни было."
+ tech_mountaineers5_desc:0 "Подготовка к самым сложным миссиям в горах на больших высотах и при низких температурах потребует от наших горных войск исключительной подготовки и дисциплины."
+ tech_special_forces_desc:0 "Чтобы прорвать линию обороны противника, нам нужно организовать отдельные отряды и подготовить их к выполнению специальных заданий."
+ advanced_special_forces:0 "Продвинутые специальные операции"
+ advanced_special_forces_desc:0 "Регулярная армия должна уметь выполнять сложные операции. Помимо наступления и обороны, войска должны выполнять нестандартные задачи."
+ improved_special_forces:1 "Расширенные специальные операции"
+ improved_special_forces_desc:1 "Регулярная армия должна уметь выполнять сложные операции. Помимо наступления и обороны, войска должны выполнять нестандартные задачи."
+ extreme_environment_training_desc:0 "Подразделения, подготовленные к специальным операциям, должны быть подготовлены к соответствующим условиям. При тяжелой амуниции или при отсутствии снабжения - подобные войска должны выдержать испытания."
+ survival_training:0 "Тренировки в экстремальных условиях"
+ survival_training_desc:0 "Подразделения, подготовленные к специальным операциям, должны быть подготовлены к соответствующим условиям. При тяжелой амуниции или при отсутствии снабжения - подобные войска должны выдержать испытания."
+ elite_forces:0 "Войска специального назначения"
+ elite_forces_desc:0 "Нетрадиционные боевые действия требуют специальной подготовки. Мы должны быть уверены, что наши войска подготовлены и способны адаптироваться к суровым условиям."
 
  #KiS | Recon Company
  tech_recon:0 "Разведрота I"
