--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -2498,7 +2498,13 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_brazil.34.d:0 "Делегатам удалось найти точки соприкосновения, и конференция прошла успешно!"
  ww1_brazil.34.a:0 "Победа для Южной Америки!"
  ww1_brazil.34.b:0 "Они глупцы!"
-  
+ ww1_brazil.35.t: "Sell the Rio de Janeiro Battleship?"
+ ww1_brazil.35.d: "We clearly went over budget, and our relations with our neighbors are warming, perhaps we should just sell the ship?"
+ ww1_brazil.35.a: "We need the money."
+ ww1_brazil.35.b: "We need that ship!"
+ ww1_brazil.36.t: "Pinheiro Machado Assasinated!"
+ ww1_brazil.36.d: "From the beginning of the year, he faced the clamor of the streets of the Federal Capital, when he was booed by supporters of Nilo Peçanha, whose election for president of the state of Rio de Janeiro had almost been prevented by the will of Pinheiro Machado. Thousands of "nilists" called for his head. When he put forward the name of Hermes da Fonseca as Senator for Rio Grande do Sul, he was almost lynched by a fierce crowd that was waiting for him at the door of the Senate. It was on this occasion that Pinheiro Machado said one of his most famous phrases, when he ordered the coachman who had picked him up at the door of the Palácio do Conde dos Arcos and who had asked him how they should leave: "Not so slowly that it seems like an affront, nor so fast that it seems like fear!"\n\nHe was murdered with a stab in the back by Manso de Paiva. The senator was attacked in the lobby of the Hotel dos Estrangeiros, in Flamengo, where he was visiting Rubião Júnior, a politician from the São Paulo Republican Party. He was coming from the Senate and was in the company of the federal deputies from São Paulo Cardoso de Almeida and Bueno de Andrade. His last words were reportedly: "Ah, scoundrel! They stabbed me!" Manso de Paiva handed the blood-stained dagger to Cardoso de Almeida and calmly waited for the police to arrive at the hotel to arrest him.\n\nMonths earlier, Pinheiro Machado had predicted his own death in an interview with journalist João do Rio: "I'll die fighting. They'll kill me in the back, they're 'thin-legged'. It's a shame it won't be in the Senate, like Ceasar...""
+ ww1_brazil.36.a: "The constable is dead."
  ww1_brazil.100.d:0 "В Бразилии началась партизанская война за землю между поселенцами и землевладельцами. Причиной войны стали социальные конфликты в регионе, возникшие в результате неповиновения местного населения, в частности, в связи с оформлением прав собственности на землю со стороны кабоклов. Конфликт пронизан религиозным фанатизмом, выражающимся в мессианстве и вере восставших кабоклос в то, что они ведут религиозную войну; в то же время он отражает недовольство населения своим материальным положением."
  ww1_brazil.100.a:0 "Они не смогли победить группу крестьян?"
  ww1_brazil.100.b:0 "Эти религиозные фанатики будут разбиты"
@@ -11432,6 +11438,9 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_serbia.62.t:0 "Pera Velimirović Dies"
  ww1_serbia.62.d:0 "Former prime minister Petar Velimirović has died in his home in Beograd. A veteran of the Radical political organization, he was one of the party founders and member since it's conception. A proud democrat, inspired by the ideas of Svetozar Marković, he was a fierce opponent of the Obrenović dynasty, having taken part in Timok rebellion and then following Pašić in Bulgaria, surviving and fighting for democracy ever since. He was leader of the coalition of the two radical parties since 1908, and guided our country through Annexation crisis until his replacement by Stojan Novaković and expansion of the coalition. Prime Minister [SER.GetLeader] has expressed sorrow over the loss of an influential statesman."
  ww1_serbia.62.a:0 "May he rest in peace"
+ ww1_serbia.63.t:0 "Ilija Gojković Killed"
+ ww1_serbia.63.d:0 "While travelling towards the Solun front from his treatment in France, general Ilija Gojković's ship was struck by a German U39 torpedo U-boat. After evacuation of the officers from the boat, the general entered the lifeboat. After submarine emerged and offered surrender, the general shouted "The Serbian general never surrenders", took out his gun and started shooting at the submarine, which retaliated with machine gun fire, killing the general and sinking the boat into Ionian Sea."
+ ww1_serbia.63.a:0 "A hero's death."
  ww1_serbia.100.t:0 "Черная рука"
  ww1_serbia.100.d:0 "Среди агентов территориального наблюдения поползли слухи. Влияние в стране приобретет организация под названием "Черная рука". Эта группа вооружена и участвовала в захвате власти Петром I, сражаясь с предыдущей королевской семьей в 1903 году. Хотя они представляют собой лишь незначительную силу, они, похоже, обретают силу."
  ww1_serbia.100.a:0 "Тревожно..."
