--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -1906,6 +1906,7 @@
  VICTORY_POINTS_3161: "Котка"
  VICTORY_POINTS_11121: "Брагестад"
  VICTORY_POINTS_11519: "Льеж"
+ VICTORY_POINTS_7971: "Сучжоу"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
