--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -3384,8 +3384,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SER_stojan_ribarac:0 "Stojan Ribarac"
  SER_bozidar_terzic:0 "Božidar Terzić"
  SER_marko_djuricic:0 "Marko Đuričić"
- SER_sava_grujic:0 "Sava Grujić"
  SER_svetozar_borojevic:0 "Svetozar Boroević"
+ SER_ilija_gojkovic:0 "Ilija Gojković"
 
  #Macedonia
  MAC_aleksandar_protogerov:0 "Aleksandar Protogerov"
