African Spirits + Liberian Focus Tree Fixes

--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -432,7 +432,10 @@
  SER_rearmer:0 "Rearmer"
  SER_strongman:0 "Strongman"
  SER_popular_queen:0 "Popular Queen"
- sayyid:0 "Sayyid"
+
+ SOM_sayyid:0 "Sayyid"
+ SOM_mad_mullah:0 "Mad Mullah"
+
  sickend:0 "Sickend"
  scouting_pioneer:0 "Scouting Pioneer"
  grandfather_of_the_russian_revolution:0 "Grandfather of the Russian Revolution"
