--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -432,6 +432,7 @@
  SER_rearmer:0 "Rearmer"
  SER_strongman:0 "Strongman"
  SER_popular_queen:0 "Popular Queen"
+ sayyid:0 "Sayyid"
 
  SOM_sayyid:0 "Sayyid"
  SOM_mad_mullah:0 "Mad Mullah"
