--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5593,7 +5593,7 @@ ROM_fight_illiteracy:0 "Fight Illiteracy"
 ROM_secure_the_countryside:0 "Secure the Countryside"
 ROM_prussian_values:0 "Prussian Values"
 ROM_recover_from_defeat:0 "Recover from Defeat"
-ROM_victory_in_the_great_war:0 "Victory in the Great War"
+ROM_victory_in_the_great_war:0 "Begin Demobilization"
 
 
 #custom tooltips
