--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -30,6 +30,9 @@
 
  #Leader traits
  POL_governor_general:0 "General Governor"
+ POL_temporary_chief_of_state:0 "Temporary Chief of State"
+ POL_chief_of_state:0 "Chief of State"
+ POL_marshal_of_poland:0 "First Marshal of Poland"
  #Medals
 
 
