--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9338,6 +9338,9 @@ ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
 king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
 king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen§!"
 ROM_kings_rotation_desc:0 "Romania's King prefers a 'rotation' between the 3 main parties of Romania, the §lPNL§!, the §mPCD§!, and the §cPC§!. As such, Romania's King generally loses confidence in the ruling government the longer it rules."
+ROM_cut_government_bloat:0 "Cut Government Bloat"
+ROM_glorify_the_monarchy:0 "Glorify the Monarchy"
+ROM_oppose_political_parties:0 "Oppose Political Parties"
 ROM_military_category:0 "Military Decisions"
 ROM_evaluate_chitila:0 "Evaluate Planes at Chitila"
 ROM_chitila_flag:9 "Has Evaluated Planes at Chitila"
