Tweak Qing provinces

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -459,6 +459,8 @@
  CHI_revolution_neutrality_DEF:0 "the Chinese Revolutionary Junta"
  CHI_revolution_fascism:0 "Chinese Revolutionary Junta"
  CHI_revolution_fascism_DEF:0 "the Chinese Revolutionary Junta"
+ CHI_provisional:0 "Republic of China"
+ CHI_provisional_DEF:0 "the Provisional Government of the Republic of China"
  CHI_neutrality_sichuan:0 "Sichuan"
  CHI_neutrality_sichuan_DEF:0 "the Sichuan Military Government"
  CHI_neutrality_hubei:0 "Hubei"
@@ -1323,7 +1325,8 @@
  MAN_jurchen_ADJ:0 "Jurchen"
  MON_CHI_subject:0 "Province of Outer Mongolia"
  MON_CHI_subject_DEF:0 "the Province of Outer Mongolia"
- MON_QIN_subject:0 "Outer Mongolia"
+ MON_QIN_subject:0 "Mongolia"
+ MON_QIN_subject_DEF:0 "the Mongolian Banners"
  MON_KOR_subject:0 "Outer Mongolia"
  MON_republic_communism:0 "Mongolian People's Republic"
  MON_republic_communism_DEF:0 "the Mongolian People's Republic"
@@ -1940,3 +1943,6 @@
 
  SER_AUH_neutrality:0 "Serbia"
  SER_AUH_fascism:0 "Serbia"
+
+ XSM_QIN:0 "Qinghai"
+ XSM_QIN_DEF:0 "the Qinghai Province"
