--- a/localisation/english/ww1_qing_l_english.yml
+++ b/localisation/english/ww1_qing_l_english.yml
@@ -189,6 +189,7 @@
 
  
  QIN_warlord_era_category:0 "Warlord Collapse"
+ QIN_effect_warlord_warning:0 "Our country will stabilize, but we will §Rstill be at risk of collapse§! if our stability drops this low again!"
 #custom effects\
  #
 #global flags
@@ -388,6 +389,7 @@
  
  ww1_qing.268.t:0 "Death of Empress Dowager Longyu"
  ww1_qing.268.d:0 "Empress Dowager Longyu was the empress of Emperor Guangxu, the previous emperor before Xuantong. She helped spy of the previous emperor for Cixi and helped block the 100 days reform in 1898. She adopted Puyi after he ascended the throne and was a major voice in our court. Her death has brought much disorganization to the court, and they have dropped many of the old squabbles with reformers that Empress Dowager Longyu held."
+ ww1_qing.267.a:0 "Send our regards"
 
  ww1_qing.253.t:0 "Tsinghua Fund"
  ww1_qing.253.d:0 "In 1900, the United States were given a share of the Boxer Indemnities. Believing it to be too much, they offered to re-invest this into our country. Many plans were proposed, such as Yuan Shikai's infrastructure plan, but in the end, it was agreed that the indemnity would be reduced by $10.8 million on the condition it was used to setup a western style university. This university would be located on the site of the former imperial Tsinghua Gardens to form the new Tsinghua College, staffed by several prominent US and Chinese scholars such as Liang Qichao. \n\nThe agreement was approved in 1909 by Theodore Roosevelt and the US Congress and is now ready to be implemented."
