Kingdom of Poland v3

--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -280,6 +280,7 @@
  POL_temporary_council_of_state_desc:0 "The time has come for the realization of the promises contained in the November 5 act. Based on the ordinances of the Governors General of Warsaw and Lublin, the Temporary Council of State will be established as a Polish advisory, preparatory and collaborative body for future state institutions."
  POL_adoption_of_the_constitution_draft:0 "Adoption of the Constitution Draft"
  POL_adoption_of_the_constitution_draft_desc:0 "The Temporary Council of State will adopt a draft of the Polish Constitution and electoral law by Józef Buzek. According to the constitution draft, Poland will be a constitutional monarchy, with power concentrated in the hands of the king and strong self-government."
+
  POL_regency_council_of_the_kingdom_of_poland:0 "Regency Council of the Kingdom of Poland"
  POL_regency_council_of_the_kingdom_of_poland_desc:0 "In place of the dissolved Temporary Council of State, the Regency Council of the Kingdom of Poland will be enthroned as the supreme authority of the Kingdom of Poland, replacing the king or regent. The council will be composed of Warsaw President Prince Zdzisław Lubomirski, landowner Józef Ostrowski and Warsaw Bishop Aleksander Kakowski."
  POL_the_royal_polish_government:0 "The Royal-Polish Government"
@@ -319,7 +320,7 @@
 
  ## Poland Piłsudski/Paderewski Focuses ##
  POL_cabinet_of_national_compromise: "Cabinet of National Compromise"
- POL_cabinet_of_national_compromise_desc: "The difficult situation in the country and the lack of acceptance of the cabinet by Entente requires an agreement with the opposition at home and abroad. The agreement with the Polish National Committee must take place, there is no place for political games in the face of maintaining independence. Ignacy Jan Paderewski's cabinet it's going tobe the national agreement cabinet. It strives to establish the Sejm and implement the Constitution and to obtain the best possible place at the Versailles Peace Conference."
+ POL_cabinet_of_national_compromise_desc: "The difficult situation in the country and the lack of acceptance of the cabinet by Entente requires an agreement with the opposition at home and abroad. The agreement with the Polish National Committee must take place, there is no place for political games in the face of maintaining independence. Ignacy Jan Paderewski's cabinet it's going tobe the national agreement cabinet. It strives to establish the Sejm and implement the Constitution and to obtain the best possible place at the Paris Peace Conference."
 
  POL_legislative_sejm_elections: "Legislative Sejm Elections"
  POL_legislative_sejm_elections_desc: ""
@@ -530,7 +531,14 @@
  POL_jozef_swiezynski:0 "Józef Świeżyński"
  POL_wladyslaw_wroblewski:0 "Władysław Wróblewski"
 
- POL_prime_minister_red_pilsudskite:0 "Red Pilsudskite" #Prime Minister: Red Pilsudskite
+ POL_prime_minister_kucharzewski:0 "Prime Minister"
+ POL_prime_minister_steczkowski:0 "Prime Minister"
+ POL_prime_minister_swiezynski:0 "Prime Minister"
+ 
+ POL_chairman_ponikowski:0 "Council of Ministry Governors Chairman"
+ POL_chairman_wroblewski:0 "Council of Ministry Governors Chairman" #Chairman of the Council of Ministry Governors
+
+ POL_prime_minister_red_pilsudskite:0 "Red Piłsudskiite" #Prime Minister: Red Piłsudskiite
  POL_prime_minister_ambassador_of_polish_affairs:0 "Ambassador of Polish Affairs" #Prime Minister: Ambassador of Polish Affairs
  POL_prime_minister_nationalist_realist:0 "Nationalist Political Realist" #Prime Minister: Nationalist Realist
  POL_germanophile:0 "Polish Germanophile"
