Haldane Mission work
-Finished clean up

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -143,6 +143,21 @@ ww1_germanrework.25.t:0 "Einstein Comes to Germany"
  ww1_germanrework.25.d:0 "Albert Einstein, the renowned theoretical physicist, was recently offered a job as the director of the new Kaiser Wilhelm Institute for Physics, as well as membership in the Prussian Academy of Science and the Humboldt Academy of Berlin in order to be funded to conduct research. Max Planck - a theoretical physicist who served as president of the German Physical Institute from 1905 to 1909, and creator of Planck's Constant - and Walther Nernst - friend of Kaiser Wilhelm II and thermodynamic physicist - convinced Einstein to take these jobs. He settled in Dahlem on April 1st, 1914."
  ww1_germanrework.25.a:0 "But he's a jew?"
 
+#Common Interests
+ww1_germanrework.35.t:0 "A Shooting on the Morrow"
+ ww1_germanrework.35.d:0 ""
+ ww1_germanrework.35.a:0 "A sign of good faith"
+
+#Hollweg objects to naval expansion
+ww1_germanrework.38.t:0 "Hollweg Objects to Naval Expansion"
+ ww1_germanrework.38.d:0 ""
+ ww1_germanrework.38.a:0 "It's better to ignore his ramblings"
+
+#Tirpitz promotes naval expansion
+ww1_germanrework.39.t:0 "Tirpitz Promotes Naval Expansion"
+ ww1_germanrework.39.d:0 ""
+ ww1_germanrework.38.a:0 "Why build ships when you can build peace?"
+
 #German/Belgian Colonial Event Chain #test out before making loc
 ww1_germanrework.15.t:0 "An Offer from the Kaiser"
  ww1_germanrework.15.d:0 ""
@@ -252,6 +267,8 @@ ww1_germanytooltip5:0 "The preperations for the Haldane mission will begin, by p
 ww1_germanytooltip6:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-navy Admiral, §cTirpitz§!."
 ww1_germanytooltip7:0 "Taking this focus will increase the Kaiser's support of §rHollweg§!."
 ww1_germanytooltip8:0 "Taking this focus will increase the Kaiser's support of §cTirpitz§!."
+ww1_germanytooltip9:0 "§rHollweg's§! influence over the Kaiser has increased"
+ww1_germanytooltip10:0 "§cTirpitz's§! influence over the Kaiser has increased"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
