OHL Command focuses

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -42,6 +42,14 @@ GER_tirpitzs_grand_fleet_idea:0 "Tirpitz's Grand Fleet"
 GER_tirpitzs_grand_fleet_idea_desc:0 ""
 GER_nationalise_diamond_deposits:0 "Nationalise Colonial Diamond Deposits"
 GER_nationalise_diamond_deposits_desc:0 ""
+GER_ohl_command:0 "OHL Command"
+GER_ohl_zentral:0 "OHL Command"
+GER_ohl_operation:0 "OHL Command"
+GER_ohl_politische:0 "OHL Command"
+GER_ohl_lr:0 "OHL Command"
+GER_ohl_lc:0 "OHL Command"
+GER_ohl_rc:0 "OHL Command"
+GER_ohl_final:0 "OHL Command"
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
