--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -5706,6 +5706,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_qing.20.a: "Ok."
  ww1_qing.20.b: "We shall punish them!"
 
+ ww1_qing.21.t: "Situation In Tibet"
+ ww1_qing.21.d: "Tibet has been under our military rule since a military expedition a few months ago to quell attempts at independence. The British, who also attempted to take control of Tibet, recognised our sovereignty over Tibet in 1907. Because their autonomy revoked with the rebellion, Tibet is now considered an internal part of China, but there is resistance from the local population."
+ ww1_qing.21.a: "Just quell them out already."
+
  # From Qing submod
  ## These are what RyanS decided to leave. I, Frosty, found them missing locs.
  ww1_qing.334.t: "Changde Rice Riot"
@@ -6461,7 +6465,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_china.224.a: "Constitution guarantees stability indeed."
  ww1_china.224.tt: "§YYuan Shikai§! would §Rget upset§! because he loses presidential power with §Bdecentralisation of power§!."
  ww1_china.225.t: "Tongmenghui Cabinet"
- ww1_china.225.d: ""
+ ww1_china.225.d: "Tang Shaoyi, a member of the Tongmenghui, has been named Prime Minister. The first provisional cabinet will rule the country under the Provisional Constitution. The next task will be to establish a National Assembly and write a constitution - will the separation of powers between the Prime Minister and the President work?"
  ww1_china.225.a: "Worrying already."
  ww1_china.226.t: "PM Tang Shaoyi Resigns"
  ww1_china.226.d: "Provisional President Yuan Shikai was unhappy with the implementation of the parliamentary system and confronted the Prime Minister at every turn. He even began to run the government as he pleased without the PM's approval. Premier Tang Shaoyi felt helpless and resigned. Some have expressed concern about whether Yuan Shikai can be trusted."
