--- a/localisation/english/ww1_modifiers_l_english.yml
+++ b/localisation/english/ww1_modifiers_l_english.yml
@@ -85,3 +85,4 @@
  kiautschou_malus:0 "Japanese occupation in Shandong"
  RUS_russian_civil_war_raging:0 "Russian Civil War"
  cat_armored_cars_research:0 "£research_speed_texticon Armored Car Research Speed"
+ QIN_autonomous_region:0 "Autonomous Region"
