--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -414,6 +414,7 @@
  CHI_trait_socialist_advocate:0 "Socialist Advocate"
  CHI_trait_conservative_reformer:0 "Conservative Reformer"
  schemer_yuan:0 "Schemer"
+ crusher_yuan:0 "Crusher"
  beiyang_dragon:0 "Beiyang Dragon"
  beiyang_tiger:0 "Beiyang Tiger"
  beiyang_dog:0 "Beiyang Dog"
