--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -166,6 +166,11 @@ ww1_germanrework.39.t:0 "Tirpitz Promotes Naval Expansion"
  ww1_germanrework.39.d:0 ""
  ww1_germanrework.38.a:0 "Why build ships when you can build peace?"
 
+#Formation of the OHL
+ww1_germanrework.40.t:0 "Formation of the OHL"
+ ww1_germanrework.40.d:0 ""
+ ww1_germanrework.40.a:0 "To war then"
+
 #German/Belgian Colonial Event Chain #test out before making loc
 ww1_germanrework.15.t:0 "An Offer from the Kaiser"
  ww1_germanrework.15.d:0 ""
