--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -275,6 +275,9 @@ GER_sokehs_mission_countdown_desc:0 "This mission will repeat until the focus re
 GER_ww1_state_munitions:0 "Investing in State Munitions"
 GER_built_battleships:0 "Has deployed 2 more battleships to the Kriegsmarine"
 GER_built_subs:0 "Has deployed 20 more submarines to the Kriegsmarine"
+sokehs_rebbelion_ongoing:0 "The Sokehs Rebbelion is ongoing"
+GER_failed_haldane_mission:0 "The Haldane Mission has failed"
+GER_successful_haldane_mission:0 "The Haldane Mission was successful"
 
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole."
