Appoint Solf Focus

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -297,6 +297,7 @@ GER_agricultural_incentives:0 "Agricultural Incentives"
 GER_new_major_railway_connection:0 "New Major Railway Connection"
 GER_german_migration:0 "German Migration"
 GER_porductional_efficiency:0 "Productional Efficiency"
+GER_solf_new_administration:0 "Solf's New Administration"
 
 #Focuses
 
