--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -171,6 +171,11 @@ ww1_germanrework.40.t:0 "Formation of the OHL"
  ww1_germanrework.40.d:0 ""
  ww1_germanrework.40.a:0 "To war then"
 
+#The Centre Block
+ww1_germanrework.41.t:0 "The Centre Block"
+ ww1_germanrework.41.d:0 ""
+  ww1_germanrework.41.a:0 "Imperialism in moderation"
+
 #German/Belgian Colonial Event Chain #test out before making loc
 ww1_germanrework.15.t:0 "An Offer from the Kaiser"
  ww1_germanrework.15.d:0 ""
