Pan-German Influence focus

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -176,6 +176,13 @@ ww1_germanrework.41.t:0 "The Centre Block"
  ww1_germanrework.41.d:0 ""
   ww1_germanrework.41.a:0 "Imperialism in moderation"
 
+#The Growing Pan-German Influence
+ww1_germanrework.42.t:0 "The Matter of the Pan-Germans"
+ ww1_germanrework.42.d:0 ""
+ ww1_germanrework.42.a:0 "Germany must sail a steady course"
+ ww1_germanrework.42.b:0 "We must seek shelter from the left"
+ ww1_germanrework.42.c:0 "They do have some points..."
+
 #German/Belgian Colonial Event Chain #test out before making loc
 ww1_germanrework.15.t:0 "An Offer from the Kaiser"
  ww1_germanrework.15.d:0 ""
