--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -93,7 +93,7 @@ ww1_germanrework.7.t:0 "Change to Electoral Law in Hesse"
  ww1_germanrework.7.d:0 "In the Grand Duchy of Hesse, the local government has made an amendment to the electoral law that aligns closer with the Prussian system. The law introduces plural voting rights and the direct election of representatives. Accordingly, only male taxpayers over the age of 24 are entitled to vote, but those aged 50 and over receive an additional vote. This is a move to Prussian democracy from Hesse and the amendment has spurred on the SPD cause in the Duchy."
  ww1_germanrework.7.a:0 "Another step to democracy"
 
-#1911 Anglo-German Arm Treaties, do not do the locs for these until the ai chancw is done
+#1911 Anglo-German Arm Treaties, do not do the locs for these until the ai chance is done
 ww1_germanrework.8.t:0 "England Wants to Limit the Production of Arms"
  ww1_germanrework.8.d:0 ""
  ww1_germanrework.8.a:0 "Alas, we must decline"
@@ -123,7 +123,7 @@ ww1_germanrework.18.t:0 "The Findings of the National Census"
 
 #1912 Miltary Conferance
 ww1_germanrework.20.t:0 "The Kaiser Calls for a Military Conference"
- ww1_germanrework.20.d:0 ""
+ ww1_germanrework.20.d:0 "Meeting at the Stadtschloss in Berlin, the Kaiser has called a military conference between the highest military leaders in the German Empire. It's expected that the topics of discussion will follow the tense military and diplomatic situation in Europe. Specific topics will naturally focus on Russia's 'Great Military Plan', Austria-Hungary's concerns about Serbian military action, and the relationship of the Empire with the British.\n\nKnown attendees include Tirpitz, Muller, Molkte, and Heeringen, with an equally strong presence from the Army and the Navy.\n\nAs preparations and talks about Germany's place in a war in Europe, each day brings war closer to the Reich and do doubt, soon legislature will be passed to expand the German armed forces to meet a new era of war."
  ww1_germanrework.20.a:0 "A major war is on the horizon"
 
 #Wilhelmine Germany
