--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2702,6 +2702,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  SOM_dervish_movement:0 "Dervish Movement"
  SOM_dervish_movement_desc:0 "The Dervish Movement, led by Muhammad Abdullah Hassan, represents a grassroots response to colonial rule in the Horn of Africa. Focused on Islamic revival and Somali unity, the movement seeks to mobilize local tribes against foreign domination. While it has gained some support among the population, it faces significant challenges from British and Italian forces, leading to ongoing conflict and instability in the region."
  
+ SOM_mobile_state:0 "Mobile State"
+ SOM_mobile_state_desc:0 "The Dervish forces, led by Muhammad Abdullah Hassan, rely on their ability to remain highly mobile in the vast, harsh terrains of Somalia. Utilizing light cavalry and camels, the Dervishes can move swiftly across deserts and plains, outmaneuvering slower, more conventional colonial forces. However, this mobility comes at the cost of heavy equipment and infrastructure, limiting their capacity for sustained engagements and logistical support."
+
  # Wadai
  CHA_elite_cavalry:0 "Elite Cavalry"
  CHA_elite_cavalry_desc:0 "Wadai has a capable and highly experienced military, well versed in mobile combat and the constant raiding which marked traditional warfare in the region. The core of its army is elite cavalry troops, many of whom belong to a warrior nobility."
